2005-06-14  Jorn Baayen  <jorn@openedhand.com>

	* configure.in:

	Pass '-debug' instead of '-g' to mcs.
	
	* doc/en/Muine.DBusLib/Player.xml:
	* doc/en/Muine.PluginLib/IPlayer.xml:

	Updated documentation.
	
	* src/SongDatabase.cs:
	* plugins/TrayIcon.cs:

	Remove unused functions.
	
	* src/AddWindow.cs:
	* src/ProgressWindow.cs:
	* src/SkipToWindow.cs:

	Mark glade-connected callbacks as public to silence compiler
	warnings.

2005-06-14  Jorn Baayen  <jorn@openedhand.com>

	* configure.in:

	Depend on Gtk 2.6 and gnome-icon-theme 2.10.

	* data/images/Makefile.am:
	R data/images/muine-volume-max.png:
	R data/images/muine-volume-medium.png:
	R data/images/muine-volume-min.png:
	R data/images/muine-volume-zero.png:
	* src/VolumeButton.cs:
	* src/StockIcons.cs:

	Take volume icons from the icon theme instead.

	* src/About.cs:

	Remove unused variable.

	* data/glade/PlaylistWindow.glade:
	* data/glade/ProgressWindow.glade:
	* libmuine/Makefile.am:
	R libmuine/rb-ellipsizing-label.c:
	R libmuine/rb-ellipsizing-label.h:
	* src/Actions.cs:
	R src/EllipsizingLabel.cs:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:
	* src/ProgressWindow.cs:

	- Use stock GtkLabel widget with built-in ellipsis.
	- Use ipod-style PlayPause button; should fix #304969.

2005-06-13  Jorn Baayen  <jorn@openedhand.com>

	* DBusLib/Player.cs:
	* PluginLib/IPlayer.cs:
	* plugins/TrayIcon.cs:
	* src/Actions.cs:
	* src/AddWindow.cs:
	* src/Global.cs:
	* src/PlaylistWindow.cs:

	Provide timestamps to functions raising windows, and use
	Gdk.Window.Focus instead of Gtk.Window.Present.

	Fixes #303333.

2005-05-07  Ryan Lortie  <desrt@desrt.ca>

	* plugins/TrayIcon.cs:

	Ignore all but single click events in tray icon.

2005-05-04  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Bump version number to 0.8.3.99.
	
	* data/ui/PlaylistWindow.xml:
	* src/Actions.cs:

	Swap location of playlist open/save and play song/album menu
	items.

2005-05-04  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in: